
[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2009???? - 1.22.94

[-] * Fix some memory leaks found by cppcheck.
[-] * Implemented reconnecting/retrying in DBI driver.
[-] * Fix memory leaks in SMSD found by valgrind.
[-] * Fix decoding of another Nokia message type.
[-] * Support for passing received message ID in DBI.

20090202 - 1.22.93

[-] * Fixed privileges dropping in SMSD.
[-] * SMSD inject now properly uses PhoneID.
[-] * Improve SMSD documentation.
[-] * Translations improvements.
[-] * Add ID for Nokia 7373.
[-] * Do not try to use filesystem OBEX if IrMC access was forced.
[-] * Fix possible crash in LMB decoder.
[-] * Avoid string length overflow in Nokia phonebook encoder.
[-] * Introduced backward compatibility of gammu.StateMachine.SetConfig.
[-] * Experimental dku-2 userspace driver using libusb-1.0 (fbususb).
[+] * python-gammu can now inject messages into SMSD (gammu.SMSD object).
[+] * SMSD stores summary counts of sent/received messages in database.
[+] * Added gammu-smsd-monitor program to monitor state of SMSD.
[+] * python-gammu can now monitor SMSD state.
[-] * Do not try to use OBEX 1.0 it's too old (bug #807).
[-] * Better parse ATI replies from Samsung (bug #806).
[-] * Better parse CSQ replies from Samsung (bug #806).
[-] * Add small delays to SMS sending/saving (bug #794).
[+] * SMSD monitor can now run for configured number of loops.
[+] * Added DBI backend for SMSD, so we now support wide range of databases.
[-] * SMSD does not delete SMS from phone when it's saving has failed.
[+] * Added SQL structure for sqlite, which can be used through DBI.
[+] * python-gammu can run and stop SMSD.
[+] * Initial implementation of dummy phone driver for testing.
[+] * Allow to configure path to config from command line.
[+] * SMSD monitor allows output in CSV.
    
20090126 - 1.22.92

[-] * Fixed getting of network name from saved message.