@@ -19,6 +19,7 @@
 
 #define DUMMY_MAX_LOCATION (10000)
 #define DUMMY_MAX_SMS (10000)
+#define DUMMY_MAX_MEM (10000)
 
 typedef struct {
 	FILE *log_file;
