@@ -22,6 +22,7 @@ ChangeLog
 [-] * Fix memory leaks in SMSD found by valgrind.
 [-] * Fix decoding of another Nokia message type.
 [-] * Support for passing received message ID in DBI.
+[-] * Dummy phone now supports phonebook.
 
 20090202 - 1.22.93
 
